crates/vox-compiler/tests/snapshots/golden_svg_vuv_test__halo_rect_tsx_svg_passthrough.snap
---
source: crates/vox-compiler/tests/golden_svg_vuv_test.rs
assertion_line: 171
expression: ts
---
import React from "react";

export function HaloRect(): React.ReactElement {
  return (
    <div className="px-4">
    <svg preserveAspectRatio={"xMidYMid meet"} viewBox={"0 0 100 60"}>
      <defs>
        <radialGradient cx={0.5} cy={0.5} id={"halo"} r={0.5}>
          <stop offset={"0%"} stopColor={"#34d399"} stopOpacity={0.4} />
          <stop offset={"100%"} stopColor={"#34d399"} stopOpacity={0} />
        </radialGradient>
      </defs>
      <rect fill={"url(#halo)"} height={60} width={100} />
    </svg>
    </div>
  );
}
