crates/vox-compiler/tests/snapshots/golden_svg_vuv_test__mesh_node_tsx_svg_topology.snap
---
source: crates/vox-compiler/tests/golden_svg_vuv_test.rs
assertion_line: 249
expression: ts
---
import React from "react";

export function MeshNode(): React.ReactElement {
  return (
    <div className="px-4">
    <svg viewBox={"0 0 100 100"}>
      <defs>
        <radialGradient cx={0.5} cy={0.5} id={"halo"} r={0.5}>
          <stop offset={"0%"} stopColor={"#34d399"} stopOpacity={0.4} />
          <stop offset={"100%"} stopColor={"#34d399"} stopOpacity={0} />
        </radialGradient>
      </defs>
      <g transform={"translate(50, 50)"}>
        <circle fill={"url(#halo)"} r={8} />
        <circle fill={"#34d399"} r={3} />
      </g>
    </svg>
    </div>
  );
}
